--- a/FinalModel/CreateFinalCharts_T2_presentation_charts.Rmd
+++ b/FinalModel/CreateFinalCharts_T2_presentation_charts.Rmd
@@ -59,7 +59,16 @@ OAModels = c("RA_Known_OptimallyAdjusted", "CARA_Known_OptimallyAdjusted", "RA_E
 GittinsModels = c("RA_Gittins_FALSE","RA_Gittins_TRUE")
 MLModels = c("RA_ML Model_Random", "RA_ML Model_PlayTheWinner", "RA_ML Model_PlayTheWinnerRandomised", "RA_ML Model_EpsilonGreedy", "RA_ML Model_SoftMax")
 
-PresoModels = c( "RA_ML Model_Random","RA_Estimated_RSIHR",  "RA_DBCD_RSIHR",  "CARA_Estimated_RSIHR", "CARA_DBCD_RSIHR", "RA_Gittins_FALSE", "RA_ML Model_EpsilonGreedy")
+PresoModels = c( "RA_ML Model_Random","RA_Estimated_RSIHR", "RA_Gittins_FALSE", "RA_ML Model_EpsilonGreedy")
+
+TargetComparisonModels= c("RA_ML Model_Random", "RA_Estimated_Neyman", "RA_Estimated_RSIHR", "RA_Estimated_Rosenberger", "RA_Estimated_OptimallyAdjusted")
+
+ImplementationModels=c("RA_Known_RSIHR","RA_Estimated_RSIHR","RA_DBCD_RSIHR")
+
+RA_CARA_Models = c("RA_Estimated_RSIHR","RA_DBCD_RSIHR", "CARA_Estimated_RSIHR","CARA_DBCD_RSIHR")
+
+
+
 ```
 
 
@@ -72,112 +81,140 @@ models = unique(df2_T2$Model)
 
 df_summary_T2 <- df2_T2 %>% group_by(Model, Sample_size) %>% summarise(averageSuccessProportion = mean(Successes_total/Sample_size), varSuccessProportion = var(Successes_total/Sample_size), averageAllocatedA = mean(Perc_A), VarAllocatedA = var(Perc_A), averagePower = mean(Power), varPower = var(Power), Z0_avg_all_A = mean(Z0_Allocation_TreatmentA/Sample_size), Z0_avg_successes_A = mean(Z0_Successes_TreatmentA/Sample_size), Z0_avg_successes_B = mean(Z0_Successes_TreatmentB/Sample_size), ChiSq_005 = mean(ifelse(is.na(ChiSq_pvalue),1,ChiSq_pvalue) <= 0.05), ChiSq_001 = mean(ifelse(is.na(ChiSq_pvalue),1,ChiSq_pvalue) <= 0.01), LR_test_005 = mean(ifelse(is.na(LR_test_pvalue),1,LR_test_pvalue) <= 0.05), LR_test_001 = mean(ifelse(is.na(LR_test_pvalue),1,LR_test_pvalue) <= 0.01), observations = n())
 
-df2_export_1 = df_summary_T2[df_summary_T2$Sample_size== 100,]
-df2_export_2 = df_summary_T2[df_summary_T2$Sample_size == 1000,]
-```
-
-```{r}
-df2_export_1 = select(df2_export_1, Model, P_Success = averageSuccessProportion, Allocated_A = averageAllocatedA, ChiSq = ChiSq_005, LR_test = LR_test_005)
-df2_export_2 = select(df2_export_2, Model, P_Success = averageSuccessProportion, Allocated_A = averageAllocatedA, ChiSq = ChiSq_005, LR_test = LR_test_005)
-print(xtable(df2_export_1, type = "latex"), file = paste("C:/Users/richa/Desktop/Thesis/Images/Tables/Table_1_n100_summary_Scenario",scenarioNumber,".tex", sep = ""))
-print(xtable(df2_export_2, type = "latex"), file = paste("C:/Users/richa/Desktop/Thesis/Images/Tables/Table_2_n1000_summary_Scenario",scenarioNumber,".tex", sep = ""))
 ```
 
 
-# Chart 1.1 - Percent allocated to A, all model violins, t = 2, n = 100, 1000
-```{r}
-plot_A <- ggplot(data = df2_T2[df2_T2$Sample_size == 100,], aes(Model, Perc_A), width = 500) + geom_violin(scale = "area") +xlab("Model") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))+theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
-plot_B <- ggplot(data = df2_T2[df2_T2$Sample_size == 1000,], aes(Model, Perc_A), width = 500) + geom_violin(scale = "area") +xlab("Model") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))+theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
-
-plot_grid(plot_A, plot_B, labels = c('A', 'B'), ncol = 1, align = 'hv')
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart1_1_Combined_violins_percA_n1000_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", height = 50, width = 50, units = "cm")
-```
-
-
-# Chart 1.2 - Total successes, all model violins, t = 2, n = 100, 1000
-```{r}
-plot_A <- ggplot(data = df2_T2[df2_T2$Sample_size == 100,], aes(Model, Successes_total/Sample_size), width = 500) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Average success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_B <- ggplot(data = df2_T2[df2_T2$Sample_size == 1000,], aes(Model, Successes_total/Sample_size), width = 500) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Average success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_grid(plot_A, plot_B, labels = c('A', 'B'), ncol = 1, align = 'hv')
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart1_2_Combined_violins_success_n1000_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 30, height = 30, units = "cm")
-```
-
-
-# Chart 2 Violins by allocation method, n - 50, 1000
-```{r}
-plot_A <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 50, (df2_T2$Model %in% NeymanModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_B <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 50, (df2_T2$Model %in% RSIHRModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_C <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 50, (df2_T2$Model %in% RosenbergerModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_D <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 50, (df2_T2$Model %in% OAModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_E <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 50, (df2_T2$Model %in% GittinsModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_F <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 50, (df2_T2$Model %in% MLModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-```
-
-```{r}
-plot_grid(plot_A, plot_B, plot_C, plot_D, plot_E, plot_F, ncol = 2, align = 'hv', labels = c("A", "B", "C", "D", "E", "F"))
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart2_1_Combined_violins_SuccessComparison_n50_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 30, height = 50, units = "cm")
-```
-
-```{r}
-plot_A <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 1000, (df2_T2$Model %in% NeymanModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_B <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 1000, (df2_T2$Model %in% RSIHRModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_C <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 1000, (df2_T2$Model %in% RosenbergerModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_D <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 1000, (df2_T2$Model %in% OAModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_E <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 1000, (df2_T2$Model %in% GittinsModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-
-plot_F <- ggplot(data = df2_T2[apply(bind_cols(df2_T2$Sample_size == 1000, (df2_T2$Model %in% MLModels)), 1, all),], aes(Model, Successes_total/Sample_size), width = 200, height = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Model") + ylab("Total success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(0,1))
-```
-
-```{r}
-plot_grid(plot_A, plot_B, plot_C, plot_D, plot_E, plot_F, ncol = 2, align = 'hv', labels = c("A", "B", "C", "D", "E", "F"))
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart2_1_Combined_violins_SuccessComparison_n1000_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 30, height = 50, units = "cm")
-```
 
 
 # Chart 3 - Average success proportion with sample size - T = 2
-
-
 ```{r}
 labelMin = floor(min(df_summary_T2$averageAllocatedA)*20)/20
 labelMax = ceiling(max(df_summary_T2$averageAllocatedA)*20)/20
-```
 
-```{r}
-plot_grid(plot_A, plot_B, plot_C, plot_D, plot_E, plot_F, ncol = 2, align = 'hv', labels = c("A", "B", "C", "D", "E", "F"))
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart4_Combined_line_allocatedA_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 40, height = 30, units = "cm")
-```
-
-```{r}
-ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, averageAllocatedA, color = Model), width = 200, height = 200) +geom_line()+xlab("Sample size") + ylab("Average proprtion allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax))
+labelMin2 = floor(min(df_summary_T2$averageSuccessProportion)*20)/20
+labelMax2 = ceiling(max(df_summary_T2$averageSuccessProportion)*20)/20
 ```
 
 
 ```{r}
-labelMin = floor(min(df_summary_T2$averageSuccessProportion)*20)/20
-labelMax = ceiling(max(df_summary_T2$averageSuccessProportion)*20)/20
+df_summary_T2$label <- NA
+df_summary_T2$label[which(df_summary_T2$Sample_size == max(df_summary_T2$Sample_size))] <- df_summary_T2$Model[which(df_summary_T2$Sample_size == max(df_summary_T2$Sample_size))]
+
+df_summary_T2 %>%
+    mutate(LongName = recode(label, 
+               `RA_ML Model_Random` = "Random",
+                RA_Known_RSIHR = "RSIHR_Known", 
+                RA_Estimated_RSIHR = "RSIHR_Estimated",
+                RA_DBCD_RSIHR = "RSIHR_DABCD",
+                CARA_Estimated_RSIHR = "RSIHR_CARA_Estimated",
+                CARA_DBCD_RSIHR = "RSIHR_CARA_DABCD",
+                RA_Gittins_FALSE = "Gittins",
+               `RA_ML Model_EpsilonGreedy` = "Epsilon greedy"
+                             )
+           ) ->    df_summary_T2
+
+df_summary_T2 %>%
+    mutate(LongName_Model = recode(label, 
+               `RA_ML Model_Random` = "Random",
+                RA_Estimated_Neyman = "Neyman", 
+                RA_Estimated_RSIHR = "RSIHR",
+                RA_Estimated_Rosenberger = "Rosenberger",
+                RA_Estimated_OptimallyAdjusted = "Optimally Adjusted",
+                CARA_Estimated_RSIHR = "RSIHR_CARA_Estimated",
+                CARA_DBCD_RSIHR = "RSIHR_CARA_DABCD",
+                RA_Gittins_FALSE = "Gittins",
+               `RA_ML Model_EpsilonGreedy` = "Epsilon greedy"
+                             )
+           ) ->    df_summary_T2
+
+
+df_summary_T2 %>%
+    mutate(LongName_Implement = recode(label, 
+               `RA_ML Model_Random` = "Random",
+                RA_Known_RSIHR = "Known", 
+                RA_Estimated_RSIHR = "Estimated",
+                RA_DBCD_RSIHR = "DABCD",)
+           ) ->    df_summary_T2
+
+df_summary_T2 %>%
+    mutate(LongName_RA_CARA = recode(label, 
+               `RA_ML Model_Random` = "Random",
+                RA_Estimated_RSIHR = "RSIHR_Estimated",
+                RA_DBCD_RSIHR = "RSIHR_DABCD",
+                CARA_Estimated_RSIHR = "RSIHR_CARA_Estimated",
+                CARA_DBCD_RSIHR = "RSIHR_CARA_DABCD",
+                             )
+           ) ->    df_summary_T2
+
+df_summary_T2 %>%
+    mutate(LongName_all = recode(Model, 
+               `RA_ML Model_Random` = "Random",
+                RA_Known_RSIHR = "RSIHR_Known", 
+                RA_Estimated_RSIHR = "RSIHR_Estimated",
+                RA_DBCD_RSIHR = "RSIHR_DABCD",
+                CARA_Estimated_RSIHR = "RSIHR_CARA_Estimated",
+                CARA_DBCD_RSIHR = "RSIHR_CARA_DABCD",
+                RA_Gittins_FALSE = "Gittins",
+               `RA_ML Model_EpsilonGreedy` = "Epsilon greedy"
+                             )
+           ) ->    df_summary_T2
+
 ```
 
+```{r}
+
+p1 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, averageAllocatedA, color = Model), width = 100, height = 100) +geom_line()+xlab("Sample size")+geom_label_repel(aes(label = LongName),nudge_x = 0,na.rm = TRUE) + ylab("Average Treatment A Allocation")+ scale_y_continuous(labels = scales::percent, limits = c(0.4, 1))+scale_x_continuous(trans='log10') +
+  theme(legend.position = "none")
+
+p2 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, averageSuccessProportion, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + ylab("Total success proprtion average")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin2, labelMax2))+scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+  
+plot_grid(p1, p2, ncol = 1, align = 'hv')
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_models_1",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 30, height = 15, units = "cm")
+```
+
+```{r}
+p1 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% TargetComparisonModels,], aes(Sample_size, averageAllocatedA, color = Model), width = 100, height = 100) +geom_line()+xlab("Sample size")+geom_label_repel(aes(label = LongName_Model),nudge_x = 0,na.rm = TRUE) + ylab("Average Treatment A Allocation")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax))+scale_x_continuous(trans='log10') +
+  theme(legend.position = "none")
+
+p2 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% TargetComparisonModels,], aes(Sample_size, averageSuccessProportion, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName_Model),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + ylab("Total success proprtion average")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin2, labelMax2))+scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+  
+plot_grid(p1, p2, ncol = 1, align = 'hv')
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_TargetComparisonModels_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 30, height = 15, units = "cm")
+```
 
 
 ```{r}
-ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, averageSuccessProportion, color = Model), width = 200, height = 200) +geom_line()+xlab("Sample size") + ylab("Total success proprtion average")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax))
+p1 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% ImplementationModels,], aes(Sample_size, averageAllocatedA, color = Model), width = 100, height = 100) +geom_line()+xlab("Sample size")+geom_label_repel(aes(label = LongName_Implement),nudge_x =0,na.rm = TRUE) + ylab("Average Treatment A Allocation")+ scale_y_continuous(labels = scales::percent, limits = c(0.5, 0.6))+scale_x_continuous(trans='log10') +
+  theme(legend.position = "none")
+
+p2 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% ImplementationModels,], aes(Sample_size, averageSuccessProportion, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName_Implement),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + ylab("Total success proprtion average")+ scale_y_continuous(labels = scales::percent, limits = c(0.4, 0.43))+scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+  
+plot_grid(p1, p2, ncol = 1, align = 'hv')
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_ImplementationModels_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 30, height = 15, units = "cm")
 ```
+
+```{r}
+p1 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% RA_CARA_Models,], aes(Sample_size, averageAllocatedA, color = Model), width = 100, height = 100) +geom_line()+xlab("Sample size")+geom_label_repel(aes(label = LongName_RA_CARA),nudge_x = 0,na.rm = TRUE) + ylab("Average Treatment A Allocation")+ scale_y_continuous(labels = scales::percent, limits = c(0.48, 0.58))+scale_x_continuous(trans='log10') +
+  theme(legend.position = "none")
+
+p2 = ggplot(data = df_summary_T2[df_summary_T2$Model %in% RA_CARA_Models,], aes(Sample_size, averageSuccessProportion, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName_RA_CARA),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + ylab("Total success proprtion average")+ scale_y_continuous(labels = scales::percent, limits = c(0.4, 0.43))+scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+  
+plot_grid(p1, p2, ncol = 1, align = 'hv')
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_RA_CARA_Models_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 30, height = 15, units = "cm")
+```
+
+
+
+
 
 
 
@@ -187,146 +224,58 @@ ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_s
 labelMin = floor(min(df_summary_T2$ChiSq_005)*20)/20
 labelMax = ceiling(max(df_summary_T2$ChiSq_005)*20)/20
 
-ylabels = c("Power of Chi-Squared test (5% LoS)",
-            "Power of Chi-Squared test (5% LoS)",
-            "Type 1 error rate",
-            "Power of Chi-Squared test (5% LoS)",
-            "Type 1 error rate"
-            )
-ylabel = ylabels[as.numeric(scenarioNumber)]
+ylabel = "Power of Chi-Squared test (5% LoS)"
 ```
 
 ```{r}
-ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, ChiSq_005, color = Model), width = 200, height = 200) +geom_line()+xlab("Sample size") + 
-  ylab(ylabel)+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax))
+ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, ChiSq_005, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + 
+  ylab(ylabel)+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax))+scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_Power_Models_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 20, height = 15, units = "cm")
 ```
 
+  
 ```{r}
-labelMin = floor(min(df_summary_T2$LR_test_005)*20)/20
-labelMax = ceiling(max(df_summary_T2$LR_test_005)*20)/20
+ggplot(data = df_summary_T2[df_summary_T2$Model %in% TargetComparisonModels,], aes(Sample_size, ChiSq_005, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName_Model),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + 
+  ylab("Power of Chi-Squared test (5% LoS)")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax)) + scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
 
-ylabels = c("Power of Likelihood ratio test (5% LoS)",
-            "Power of Likelihood ratio test (5% LoS)",
-            "Power of Likelihood ratio test (5% LoS)",
-            "Power of Likelihood ratio test (5% LoS)",
-            "Type 1 error rate"
-            )
-ylabel = ylabels[as.numeric(scenarioNumber)]
-```
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_Power_TargetAllocations_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 20, height = 15, units = "cm")
+
+```   
+
 
 ```{r}
-ggplot(data = df_summary_T2[df_summary_T2$Model %in% PresoModels,], aes(Sample_size, LR_test_005, color = Model), width = 200, height = 200) +geom_line()+xlab("Sample size") + 
-  ylab(ylabel)+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax))
-```                                                                                                                                                                                 
+ggplot(data = df_summary_T2[df_summary_T2$Model %in% ImplementationModels,], aes(Sample_size, ChiSq_005, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName_Implement),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + 
+  ylab("Power of Chi-Squared test (5% LoS)")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax)) +scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_Power_ImplementationModels_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 20, height = 15, units = "cm")
+
+```   
+
+
+```{r}
+ggplot(data = df_summary_T2[df_summary_T2$Model %in% RA_CARA_Models,], aes(Sample_size, ChiSq_005, color = Model), width = 200, height = 200) +geom_line()+geom_label_repel(aes(label = LongName_RA_CARA),nudge_x = 0,na.rm = TRUE)+xlab("Sample size") + 
+  ylab("Power of Chi-Squared test (5% LoS)")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin, labelMax)) +scale_x_continuous(trans='log10')+
+  theme(legend.position = "none")
+
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_Power_RA_CARA_Models_1_Sc",scenarioNumber,".pdf", sep = ""), device = "pdf",  width = 20, height = 15, units = "cm")
+
+```   
+
+
+
+
+
+
 # Chart 7 Scatter of power and average success
-## n = 20
+## n = 50
 ```{r}
-ggplot(data = df_summary_T2[df_summary_T2$Sample_size == 30,], aes(x = averageSuccessProportion , y = ChiSq_005, color = Model, label = Model), width = 200) + geom_point() +xlab("Average total successes") + ylab("Power of ChiSq ar 5% Level of Signifcance")+ scale_y_continuous(labels = scales::percent) + scale_x_continuous(labels = scales::percent) + theme(legend.position = "none")
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart7_a_Scatter_Power_Success_n20_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 15, units = "cm")
+ggplot(data = df_summary_T2[df_summary_T2$Sample_size == 50,], aes(x = averageSuccessProportion , y = ChiSq_005, color = Model), width = 200) + geom_point() +xlab("Average total successes") + ylab("Power of Chi-Squared test (5% LoS)")+ scale_y_continuous(labels = scales::percent) + scale_x_continuous(labels = scales::percent) 
+ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Presentation/Preso_Scatter_n50_2_with_legend_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 70, units = "cm")
 ```
-
-## n = 100
-```{r}
-ggplot(data = df_summary_T2[df_summary_T2$Sample_size == 100,], aes(x = averageSuccessProportion , y = ChiSq_005, color = Model), width = 200) + geom_point() +xlab("Average total successes") + ylab("Power of ChiSq ar 5% Level of Signifcance")+ scale_y_continuous(labels = scales::percent) + scale_x_continuous(labels = scales::percent) + theme(legend.position = "none")
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart7_b_Scatter_Power_Success_n100_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 15, units = "cm")
-```
-
-
-# Chart 8: Distribution of percent of allocation A by sample size - T = 2 
-```{r}
-RA_RSIHR_Models = c("RA_Known_RSIHR", "RA_Estimated_RSIHR", "RA_DBCD_RSIHR")
-labelMin_percA = floor(min(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size %% 100 == 0, "Perc_A"])*20)/20
-labelMax_percA = ceiling(max(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size %% 100 == 0, "Perc_A"])*20)/20
-
-labelMin_success = floor(min(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size %% 100 == 0, "AvgSuccess"])*20)/20
-labelMax_success = ceiling(max(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size %% 100 == 0, "AvgSuccess"])*20)/20
-```
-
-
-```{r}
-plot_A <- ggplot(data = df2_T2[df2_T2$Model == "RA_Known_RSIHR" & df2_T2$Sample_size %% 100 == 0,], aes(as.factor(Sample_size), Perc_A), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_percA, labelMax_percA))
-
-plot_C <- ggplot(data = df2_T2[df2_T2$Model == "RA_Estimated_RSIHR" & df2_T2$Sample_size %% 100 == 0,], aes(as.factor(Sample_size), Perc_A), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_percA, labelMax_percA))
-
-plot_E <- ggplot(data = df2_T2[df2_T2$Model == "RA_DBCD_RSIHR" & df2_T2$Sample_size %% 100 == 0,], aes(as.factor(Sample_size), Perc_A), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_percA, labelMax_percA))
-
-plot_B <- ggplot(data = df2_T2[df2_T2$Model == "RA_Known_RSIHR" & df2_T2$Sample_size %% 100 == 0,], aes(as.factor(Sample_size), Successes_total/Sample_size), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("Success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_success, labelMax_success))
-
-plot_D <- ggplot(data = df2_T2[df2_T2$Model == "RA_Estimated_RSIHR" & df2_T2$Sample_size %% 100 == 0,], aes(as.factor(Sample_size), Successes_total/Sample_size), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("Success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_success, labelMax_success))
-
-plot_F <- ggplot(data = df2_T2[df2_T2$Model == "RA_DBCD_RSIHR" & df2_T2$Sample_size %% 100 == 0,], aes(as.factor(Sample_size), Successes_total/Sample_size), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("Success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_success, labelMax_success))
-
-plot_grid(plot_A, plot_B, plot_C, plot_D, plot_E, plot_F, ncol = 2, align = 'hv', labels = c("A", "B", "C", "D", "E", "F"))
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart8_Combined_Violins_successes_by_sample_size_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 40, height = 30, units = "cm")
-```
-
-## Alt plot - Sample size <100
-```{r}
-RA_RSIHR_Models = c("RA_Known_RSIHR", "RA_Estimated_RSIHR", "RA_DBCD_RSIHR")
-labelMin_percA = floor(min(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size  <= 100, "Perc_A"])*20)/20
-labelMax_percA = ceiling(max(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size <= 100, "Perc_A"])*20)/20
-
-labelMin_success = floor(min(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size  <= 100, "AvgSuccess"])*20)/20
-labelMax_success = ceiling(max(df2_T2[df2_T2$Model %in% RA_RSIHR_Models & df2_T2$Sample_size  <= 100, "AvgSuccess"])*20)/20
-```
-
-
-```{r}
-plot_A <- ggplot(data = df2_T2[df2_T2$Model == "RA_Known_RSIHR" & df2_T2$Sample_size <= 100,], aes(as.factor(Sample_size), Perc_A), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_percA, labelMax_percA))
-
-plot_C <- ggplot(data = df2_T2[df2_T2$Model == "RA_Estimated_RSIHR" & df2_T2$Sample_size <= 100,], aes(as.factor(Sample_size), Perc_A), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_percA, labelMax_percA))
-
-plot_E <- ggplot(data = df2_T2[df2_T2$Model == "RA_DBCD_RSIHR" & df2_T2$Sample_size <= 100,], aes(as.factor(Sample_size), Perc_A), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("% allocated to treatment A")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_percA, labelMax_percA))
-
-plot_B <- ggplot(data = df2_T2[df2_T2$Model == "RA_Known_RSIHR" & df2_T2$Sample_size <= 100,], aes(as.factor(Sample_size), Successes_total/Sample_size), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("Success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_success, labelMax_success))
-
-plot_D <- ggplot(data = df2_T2[df2_T2$Model == "RA_Estimated_RSIHR" & df2_T2$Sample_size <= 100,], aes(as.factor(Sample_size), Successes_total/Sample_size), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("Success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_success, labelMax_success))
-
-plot_F <- ggplot(data = df2_T2[df2_T2$Model == "RA_DBCD_RSIHR" & df2_T2$Sample_size <= 100,], aes(as.factor(Sample_size), Successes_total/Sample_size), width = 200) + geom_violin(scale = "area") +theme_bw(base_size = 20)+ theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+xlab("Sample size") + ylab("Success proportion")+ scale_y_continuous(labels = scales::percent, limits = c(labelMin_success, labelMax_success))
-
-plot_grid(plot_A, plot_B, plot_C, plot_D, plot_E, plot_F, ncol = 2, align = 'hv', labels = c("A", "B", "C", "D", "E", "F"))
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart8_Combined_Alt_Violins_successes_by_sample_size_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 40, height = 30, units = "cm")
-```
-
-
-
-
-
-# Chart 9 - Change in variance of total successes proportion with sample size - T = 2
-```{r}
-ggplot(data =  df_summary_T2, aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 250) + theme(legend.position = "none")
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart9_all_line_varSuccessProp_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 40, height = 30, units = "cm")
-```
-
-
-```{r}
-labelMin = floor(min(df_summary_T2$varSuccessProportion)*200)/200
-labelMax = ceiling(max(df_summary_T2$varSuccessProportion)*200)/200
-```
-
-
-```{r}
-plot_A <- ggplot(data =  df_summary_T2[(df_summary_T2$Model %in% NeymanModels) & df_summary_T2$Sample_size <=1000,], aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 1000) + ylim(labelMin, labelMax)
-
-plot_B <- ggplot(data =  df_summary_T2[(df_summary_T2$Model %in% RSIHRModels) & df_summary_T2$Sample_size <=1000,], aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 1000)+ ylim(labelMin, labelMax)
-
-plot_C <- ggplot(data =  df_summary_T2[(df_summary_T2$Model %in% RosenbergerModels) & df_summary_T2$Sample_size <=1000,], aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 1000)+ ylim(labelMin, labelMax)
-
-plot_D <- ggplot(data =  df_summary_T2[(df_summary_T2$Model %in% OAModels) & df_summary_T2$Sample_size <=1000,], aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 1000)+ ylim(labelMin, labelMax)
-
-plot_E <- ggplot(data =  df_summary_T2[(df_summary_T2$Model %in% GittinsModels) & df_summary_T2$Sample_size <=1000,], aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 1000)+ ylim(labelMin, labelMax)
-
-plot_F <- ggplot(data =  df_summary_T2[(df_summary_T2$Model %in% MLModels) & df_summary_T2$Sample_size <=1000,], aes(Sample_size, varSuccessProportion, color = Model)) +geom_line()+xlab("Sample size") + ylab("Variance of success proportion") + theme(legend.position="bottom")+ xlim(0, 1000)+ ylim(labelMin, labelMax)
-
-plot_grid(plot_A, plot_B, plot_C, plot_D, plot_E, plot_F, ncol = 2, align = 'hv', labels = c("A", "B", "C", "D", "E", "F"))
-
-
-ggsave(paste("C:/Users/richa/Desktop/Thesis/Images/Scenario_",scenarioNumber,"/Chart9_Combined_line_varSuccessProp_t2_Scenario_",scenarioNumber,".pdf", sep = ""), device = "pdf", width = 40, height = 30, units = "cm")
-```
-
-
 
 
 
